force-app/main/default/objects/Opportunity/fields/Year_1_Assumed_Product_Loss_Cost__c.field-meta.xml
<CustomField>
    <fullName>Year_1_Assumed_Product_Loss_Cost__c</fullName>
    <label>Year 1 - Assumed Product Loss Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>