force-app/main/default/objects/Opportunity/fields/Year_1_Cancel_Rate_HMS__c.field-meta.xml
<CustomField>
    <fullName>Year_1_Cancel_Rate_HMS__c</fullName>
    <defaultValue>31.8/100</defaultValue>
    <description>HMS</description>
    <label>Year 1 Cancel Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>