force-app/main/default/objects/Opportunity/fields/Year_1_Midpoint__c.field-meta.xml
<CustomField>
    <fullName>Year_1_Midpoint__c</fullName>
    <formula>(Month_13__c + Month_25__c) / 2</formula>
    <label>Year 1 Midpoint</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>