force-app/main/default/objects/Opportunity/fields/Year_2_Cancel_Rate__c.field-meta.xml
<CustomField>
    <fullName>Year_2_Cancel_Rate__c</fullName>
    <label>Year 3+ - Assumed Product Cancel Rates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>