force-app/main/default/objects/Opportunity/fields/Year_2_Midpoint__c.field-meta.xml
<CustomField>
    <fullName>Year_2_Midpoint__c</fullName>
    <formula>(Month_25__c +  Month_37__c) / 2</formula>
    <label>Year 2 Midpoint</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>