force-app/main/default/objects/Opportunity/fields/Year_3_Midpoint__c.field-meta.xml
<CustomField>
    <fullName>Year_3_Midpoint__c</fullName>
    <formula>( Month_37__c +  Month_49__c ) / 2</formula>
    <label>Year 3 Midpoint</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>