force-app/main/default/objects/Opportunity/recordTypes/Business_Development_Opportunities.recordType-meta.xml
<RecordType>
    <fullName>Business_Development_Opportunities</fullName>
    <active>true</active>
    <businessProcess>BD</businessProcess>
    <label>Business Development Opportunities</label>
</RecordType>