force-app/main/default/objects/Opportunity/recordTypes/HMS_Opportunities.recordType-meta.xml
<RecordType>
    <fullName>HMS_Opportunities</fullName>
    <active>true</active>
    <businessProcess>HMS</businessProcess>
    <label>HMS Opportunities</label>
</RecordType>