force-app/main/default/objects/Opportunity/recordTypes/PON_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>PON_Opportunity</fullName>
    <active>true</active>
    <businessProcess>BD</businessProcess>
    <label>PON Opportunity</label>
</RecordType>