force-app/main/default/objects/Opportunity/validationRules/Account_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Owner</fullName>
    <active>true</active>
    <description>This validation rules when opportunity is closed won and account owner is empty.</description>
    <errorConditionFormula>ISPICKVAL(StageName,&quot;Closed Won&quot;)&amp;&amp; 
ISBLANK( Account_Owner__c ) &amp;&amp;  RecordTypeId = &apos;0121H000001IdWK&apos;</errorConditionFormula>
    <errorDisplayField>Account_Owner__c</errorDisplayField>
    <errorMessage>An Account Owner must be identified prior to closing this opportunity</errorMessage>
</ValidationRule>