force-app/main/default/objects/Opportunity/validationRules/Contract_Executed_Checkbox.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Executed_Checkbox</fullName>
    <active>true</active>
    <description>When Opportunity is closed Won, need to check contracted executed checkbox</description>
    <errorConditionFormula>AND( ISPICKVAL(StageName, &quot;Closed Won&quot;) ,Contract_Executed__c = False ,  RecordTypeId = &apos;0121H000001IdWK&apos;)</errorConditionFormula>
    <errorDisplayField>Contract_Executed__c</errorDisplayField>
    <errorMessage>When Opportunity is closed Won, need to check contracted executed checkbox</errorMessage>
</ValidationRule>