force-app/main/default/objects/Opportunity/validationRules/Opportunity_Account_NDA_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Account_NDA_Value</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISPICKVAL( StageName, &quot;Proposal&quot; ), Account.NDA__c= False )&amp;&amp;  RecordTypeId = &apos;0121H000001IdWK&apos;</errorConditionFormula>
    <errorMessage>Ensure an NDA is in place and then Navigate to associated account and select NDA to be True on Account record to proceed to Proposal Stage</errorMessage>
</ValidationRule>