force-app/main/default/objects/Opportunity/validationRules/Other_Loss_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Loss_reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(  Lost_Reason__c  ,  &quot;Other&quot;),ISPICKVAL(Other_Loss_Reason__c, &quot;&quot; ) )</errorConditionFormula>
    <errorDisplayField>Other_Loss_Reason__c</errorDisplayField>
    <errorMessage>Loss reason Must be Filled Out</errorMessage>
</ValidationRule>