force-app/main/default/objects/Opportunity/listViews/BD_Opportunities.listView-meta.xml
<ListView>
    <fullName>BD_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Business_Development_Opportunities</value>
    </filters>
    <label>BD Opportunities</label>
</ListView>