force-app/main/default/objects/Opportunity/listViews/HMS_Opportunities.listView-meta.xml
<ListView>
    <fullName>HMS_Opportunities</fullName>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>VP_RVP__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Days_Since_Last_Activity__c</columns>
    <columns>Potential_Annual_Warranty_Volume__c</columns>
    <columns>Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.HMS_Opportunities</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <label>HMS Opportunities</label>
</ListView>