force-app/main/default/objects/Opportunity/listViews/HMS_Opportunity_Stages_Open_Pipeline.listView-meta.xml
<ListView>
    <fullName>HMS_Opportunity_Stages_Open_Pipeline</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Estimated_Annual_Gross_Sales_HMS__c</columns>
    <columns>One_Year_Earned_Revenue__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Contacted Decision Maker,Proposal,Agreement Requested,Negotiation</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.HMS_Opportunities</value>
    </filters>
    <label>HMS: Opportunity Stages Open Pipeline</label>
</ListView>