force-app/main/default/objects/Opportunity/listViews/Opportunity_Stage_Contacted_Decision_M.listView-meta.xml
<ListView>
    <fullName>Opportunity_Stage_Contacted_Decision_M</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Contacted Decision Maker</value>
    </filters>
    <label>Opp-Stage = Contacted Decision Maker</label>
</ListView>