force-app/main/default/objects/Opportunity/listViews/Opportunity_Stage_Name_On_Hold.listView-meta.xml
<ListView>
    <fullName>Opportunity_Stage_Name_On_Hold</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>On Hold</value>
    </filters>
    <label>Opportunity Stage Name = On Hold</label>
</ListView>